# anti_kd_backdoor

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  datasets.py  flowers102_work_dirs  gtsrb_work_dirs  merge_json.py  multiple_adba.py  pyproject.toml  readme.md  svhn_work_dirs  test.py  test_backdoor.py  test_imagenet.py  train.py  utils.py  work_dirs
.github/workflows/: test.yaml
anti_kd_backdoor/config/: config.py
anti_kd_backdoor/data/: builder.py
anti_kd_backdoor/network/: builder.py  trigger.py
anti_kd_backdoor/pl_model/: anti_kd_backdoor.py
anti_kd_backdoor/trainer/: anti_kd.py  base.py  builder.py  finetune.py  nad.py  normal.py
anti_kd_backdoor/utils/: __init__.py  metric.py  misc.py  pruning.py
config/cifar10/: anti_kd_t-r34-pretrain_s-r18-v16-mv2_cifar10_bs128.py  anti_kd_t-r34_s-r18-trainable=True-v16-mv2-trainable=True_cifar10_bs128.py  anti_kd_t-r34_s-r18-trainable=True-v16-mv2_cifar10_bs128.py  anti_kd_t-r34_s-r18-v16-mv2-trainable=True_cifar10_bs128.py  anti_kd_t-r34_s-r18-v16-mv2_cifar10.py  anti_kd_t-r34_s-r18-v16-mv2_cifar10_bs128.py  anti_kd_t-r34_s-r18-v16-mv2_cifar10_bs128_ratio=0.02.py  anti_kd_t-r34_s-r18-v16-mv2_cifar10_bs128_ratio=0.05.py  anti_kd_t-r34_s-r18-v16-mv2_kd=False_cifar10_bs128.py  resnet34.py  (+26 more)
data/: meta.json
nets/: __init__.py  densenet_cifar.py  generator.py  mobilenetv2_cifar.py  resnet_cifar.py  vgg_cifar.py
tools/: download_dataset.py  gpu_helper.py  test_acc.py  test_anti_kd.py  test_normal.py  test_trigger_on_pretrained.py  test_trigger_on_robustbench.py  train.py  visualize.py
(+174 files in other folders)
