[tool.poetry]
name = "anti-kd-backdoor"
version = "0.1.0"
description = ""
authors = ["wutongshenqiu <44188071+wutongshenqiu@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "anti_kd_backdoor"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.1"
torchvision = "^0.13.1"
pytorch-lightning = "^1.7.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
